# covid19count

./: .gitignore  LICENSE  Pipfile  README.md  avaiableRegions.py  covid19count.py  pyproject.toml  requirements.txt  save_regions.py  test_all.py
.github/workflows/: build.yml  dockerimage.yml
docker/: Dockerfile
docker/node/: app.js
docker/node/html/: index.html
